# spiff

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: mctypes.hpp  proxy.hpp  varint.hpp  varint_varlong.hpp
include/packets/: packet.hpp
src/: main.cpp  proxy.cpp  varint.cpp  varint_varlong.cpp
src/packets/: packet.cpp
tests/: CMakeLists.txt  varint_varlong_test.cpp
